@@ -1,4 +1,7 @@
 2009-09-10 Magnus Hagdorn
+ * libglimmer/glimmer_ts.F90: change documentation strings to doxygen
+
+2009-09-10 Magnus Hagdorn
  * README: document documentation build
  * bootstrap: don't warn about possible incompatibilities in Makefiles
  * configure.in: find doxygen
